# StressDetectionWatchBasedOnElectrodermalActivity

./: .cproject  .gitignore  CKLink_BL616.launch  README.md
.metadata/: version.ini
bsp/common/: CMakeLists.txt
examples/ESDC_project/: CMakeLists.txt  FreeRTOSConfig.h  Makefile  fatfs_conf_user.h  flash_prog_cfg.ini  lcd_conf_user.h  lv_conf.h  lwipopts_user.h  main.c  main_functions.cc  main_functions.h  main_head.h  model.cc  model.h  msc_ram_template.c  onenet_post.c.bak  proj.conf  touch_conf_user.h  usb_config.h  引脚记录.txt
examples/ESDC_project/AD5940/: AD5940Port.c  AD5940Port.h  ElectrodermalActivity.c  ElectrodermalActivity.h  ad5940.c
examples/ESDC_project/Algorithm/: findpeaks.h
examples/ESDC_project/Algorithm/CControl/Documents/Examples/ArtificialIntelligence/: inpolygon.txt
examples/ESDC_project/Algorithm/CControl/Headers/: Functions.h
examples/ESDC_project/Algorithm/CControl/Sources/ArtificialIntelligence/: Astar.c  inpolygon.c
examples/ESDC_project/Algorithm/CControl/Sources/Filtering/: sr_ukf_state_estimation.c
examples/ESDC_project/Algorithm/CControl/Sources/LinearAlgebra/: cholupdate.c  inv.c  linsolve_gauss.c  linsolve_qr.c  qr.c
examples/ESDC_project/Algorithm/CControl/Sources/Miscellaneous/: sign.c  vmax.c  vmin.c
examples/ESDC_project/Algorithm/CControl/Sources/SystemIdentification/: sr_ukf_parameter_estimation.c
examples/ESDC_project/Algorithm/Wavelet/src/: wavelib.c
examples/ESDC_project/Algorithm/my_findpeaks/: defines.txt  eml_setop.c  eml_setop.h  my_findpeaks.c  my_findpeaks.h  my_findpeaks_data.c  my_findpeaks_data.h  my_findpeaks_emxAPI.c  my_findpeaks_emxAPI.h  my_findpeaks_emxutil.c  my_findpeaks_emxutil.h  my_findpeaks_initialize.c  my_findpeaks_initialize.h  my_findpeaks_rtw.bat  my_findpeaks_rtw.mk  my_findpeaks_terminate.c  my_findpeaks_terminate.h  my_findpeaks_types.h  rtGetInf.c  rtGetInf.h  rtGetNaN.c  rtGetNaN.h  rt_nonfinite.c  rt_nonfinite.h  rtwtypes.h  sort.c  sort.h  sortIdx.c  sortIdx.h
examples/ESDC_project/Algorithm/sparsEDA/: sparsEDA.c  sparsEDA.h
examples/ESDC_project/CSNP4GCR01/: NAND_SPI copy.c.bak  NAND_SPI.c  NAND_SPI.h  fatfs_spi_nand.c
examples/ESDC_project/INS5699S/: ins5699s.c  ins5699s.h
examples/ESDC_project/LIS2DH12/: lis2dh12_reg.c  lis2dh12_reg.h
examples/ESDC_project/M117/: m117_drv.c  m117_drv.h
examples/ESDC_project/M601/: M601.c  M601.h
examples/ESDC_project/MAX17048/: max17048.c  max17048.h
examples/ESDC_project/MAX30101/: max30101_algo.c  max30101_algo.h  max30101_drv.c  max30101_drv.h
examples/ESDC_project/MLX90632/: mlx90632.c  mlx90632.h  mlx90632_depends.h
examples/ESDC_project/TMP117/: tmp117_drv.c  tmp117_drv.h
examples/ESDC_project/afe4404/: AFE4404.c  AFE4404.h  AFE4404_PORT.h  Calibration_AFE4404.c  Calibration_AFE4404.h  ProcessScript.txt  hrm.c  hrm.h
examples/ESDC_project/cvxEDA/: PresolveWorkingSet.c  PresolveWorkingSet.h  RemoveDependentEq_.c  RemoveDependentEq_.h  RemoveDependentIneq_.c  RemoveDependentIneq_.h  addBoundToActiveSetMatrix_.c  addBoundToActiveSetMatrix_.h  bsxfun.c  bsxfun.h  colon.c  colon.h  computeFirstOrderOpt.c  computeFirstOrderOpt.h  computeFval.c  computeFval.h  computeFval_ReuseHx.c  computeFval_ReuseHx.h  computeGrad_StoreHx.c  computeGrad_StoreHx.h  computeQ_.c  computeQ_.h  compute_deltax.c  compute_deltax.h  compute_lambda.c  compute_lambda.h  conv.c  conv.h  countsort.c  countsort.h  cvxEDA.c  cvxEDA.h  cvxEDA_data.c  cvxEDA_data.h  cvxEDA_emxAPI.c  cvxEDA_emxAPI.h  cvxEDA_emxutil.c  cvxEDA_emxutil.h  cvxEDA_initialize.c  cvxEDA_initialize.h  (+95 more)
examples/ESDC_project/cvxEDA/html/: report.mldatx
examples/ESDC_project/embedded_pedometer/: count_steps.c  count_steps.h
examples/ESDC_project/model/: esdc_model.h  esdc_model_bin.h
examples/ESDC_project/myproject/: CMakeLists.txt  filelist.txt  lv_myproject.mk  ui.c  ui.h  ui_events.h
examples/ESDC_project/myproject/fonts/: ui_font_Chinese.c  ui_font_DateFont.c  ui_font_Number_big.c  ui_font_SecondFont.c  ui_font_TempFont.c  ui_font_TempNumberFont.c  ui_font_Title.c  ui_font_YearFont.c  ui_font_lock.c
examples/ESDC_project/myproject/images/: ui_img_1114156892.c  ui_img_1395092270.c  ui_img_1560645021.c  ui_img_1586768942.c  ui_img_1586912434.c  ui_img_1586984052.c  ui_img_1587015825.c  ui_img_1587055926.c  ui_img_1587127544.c  ui_img_1587159317.c  ui_img_1587231191.c  ui_img_1659830797.c  ui_img_1659902415.c  ui_img_1659974289.c  ui_img_1660006062.c  ui_img_1660045907.c  ui_img_1660077680.c  ui_img_1666422241.c  ui_img_1711384410.c  ui_img_189584499.c  ui_img_1916941551.c  ui_img_208425557.c  ui_img_352157552.c  ui_img_619575779.c  ui_img_700332115.c  ui_img_700435506.c  ui_img_700475607.c  ui_img_700547225.c  ui_img_700578998.c  ui_img_700619099.c  ui_img_700650872.c  ui_img_700690717.c  ui_img_700722490.c  ui_img_700794364.c  ui_img_872619278.c  ui_img_904422901.c  ui_img_bluetoothoff_png.c  ui_img_bluetoothon_png.c  ui_img_footsteps_png.c  ui_img_location_png.c  (+2 more)
examples/ESDC_project/myproject/screens/: ui_Debug.c  ui_HearteRate.c  ui_Home.c  ui_Sensor.c  ui_Settings.c
examples/ESDC_project/onenet/: onenet_mqtt.c  onenet_mqtt.h  onenet_post.c  onenet_post.h
examples/ESDC_project/qpOASES/c/: Makefile
examples/ESDC_project/qpOASES/include/qpOASES/: Types.hpp
examples/ESDC_project/qpOASES/src/: SQProblemSchur.cpp
(+1220 files in other folders)
